# eventscraper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
src/models/: .#data_models.py  data_models.py
src/scraper/: base.py  hackernews.py  manager.py  reuters_japan.py  yahoo_news_japan.py
src/utils/: config.py  export.py
tests/: test_hackernews.py  test_reuters_japan.py  test_validation.py  test_yahoo_news_japan.py
