[tool.poetry]
name = "eventscraper"
version = "0.1.0"
description = "Event Scraper"
authors = ["Unknown <unknown@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.9.1"
beautifulsoup4 = "4.12.2"
lxml = "4.9.3"
pandas = "2.1.4"
pydantic = "2.5.2"
typer = "0.12.3"
pyyaml = "6.0.1"
loguru = "0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "0.23.8"
pytest-cov = "4.1.0"
mypy = "1.13.0"
ruff = "0.6.8"
pandas-stubs = "2.1.4.231227"
types-PyYAML = "6.0.12.20240917"
types-beautifulsoup4 = "4.12.0.20240907"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "ANN",
  "ASYNC",
]
ignore = [
  "ANN101",
  "ANN102",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
strict_optional = true
plugins = []

[[tool.mypy.overrides]]
module = [
  "aiohttp",
  "aiohttp.*",
  "bs4",
  "bs4.*",
  "loguru",
  "loguru.*",
  "pandas",
  "pandas.*",
  "pydantic",
  "pydantic.*",
  "typer",
  "yaml",
]
ignore_missing_imports = true

